# Feasible-Region-Iteration

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt
relax/: __init__.py
relax/algorithm/: __init__.py  base.py  fac.py  fsi.py  pb.py  sac.py  sac_fsi.py  sac_hc.py  sac_hjr.py  sac_lag.py  sac_pb.py  sac_vbl.py
relax/buffer/: __init__.py  base.py  tree.py
relax/network/: blocks.py  common.py  fac.py  fsi.py  pb.py  sac.py  sac_fsi.py  sac_hc.py  sac_hjr.py  sac_lag.py  sac_pb.py  sac_vbl.py
relax/sos/: double_integrator.py  double_integrator2.py  point_robot.py  solve.py  utils.py
relax/trainer/: __init__.py  off_policy.py
relax/utils/: experience.py  flag.py  fs.py  jax_utils.py  random_utils.py  timing.py  typing.py
scripts/: plot_curves.py  train_certificate.py  train_rl.py
